<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.movie.DetailMovieFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:backgroundTint="@color/yellow"
        android:visibility="gone"
        android:contentDescription="@string/str_image_show"
        android:src="@drawable/ic_favorite_outline_dark"
        app:layout_constraintBottom_toBottomOf="@id/root_layout"
        app:layout_constraintRight_toRightOf="@id/root_layout"
        tools:visibility="visible"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:fillViewport="true"
        android:padding="@dimen/dp_4"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/image_view_movie"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_140"
                    android:layout_marginTop="@dimen/dp_24"
                    android:background="@color/soft_blue"
                    android:contentDescription="@string/str_image_show"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_24"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_movie"
                    tools:text="Friends" />

                <TextView
                    android:id="@+id/tv_genres_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:gravity="center
"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
                    tools:text="Drama, Komedi" />

                <TextView
                    android:id="@+id/tv_score_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:contentDescription="@string/str_image_show"
                    android:padding="@dimen/dp_2"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintBottom_toTopOf="@+id/tv_title_movie"
                    app:layout_constraintEnd_toEndOf="@+id/image_view_movie"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="@+id/image_view_movie"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_date_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    tools:text="21 Jan 2021" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/str_release_date"
                    android:textColor="@color/soft_blue"
                    app:layout_constraintEnd_toStartOf="@+id/tv_date_movie"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genres_movie" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:text="@string/str_status"
                    android:textColor="@color/soft_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_status_movie"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/tv_status_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    tools:text="Released" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:contentDescription="@string/str_image_show"
                    android:text="@string/str_overview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_movie" />

                <TextView
                    android:id="@+id/tv_desc_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:textColor="@color/soft_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground 'fight clubs' forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion." />

                <Button
                    android:id="@+id/btn_share_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:text="@string/str_btn_share"
                    android:textColor="@color/dark_blue"
                    android:drawableLeft="@drawable/ic_share_dark_blue"
                    android:drawablePadding="@dimen/dp_8"
                    android:backgroundTint="@color/yellow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_movie" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="center"
                android:visibility="gone"
                tools:text="There is no data" />

            <ProgressBar
                android:id="@+id/loading_info"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>