...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/image_view_show"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_140"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/dp_24"
                    android:contentDescription="@string/str_image_show"
                    android:background="@color/soft_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_24"
                    android:gravity="center"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_show"
                    tools:text="Friends" />

                <TextView
                    android:id="@+id/tv_genres_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_32"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genres_show"
                    tools:text="7 Seasons" />

                <TextView
                    android:id="@+id/tv_score_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:padding="@dimen/dp_2"
                    tools:text="10"
                    android:contentDescription="@string/str_image_show"
...
                    app:layout_constraintBottom_toTopOf="@+id/tv_title_show"
                    app:layout_constraintEnd_toEndOf="@+id/image_view_show"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="@+id/image_view_show" />

                <TextView
                    android:id="@+id/tv_date_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:text="@string/str_status"
                    android:textColor="@color/soft_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_status_show"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
...
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_show" />

                <TextView
                    android:id="@+id/tv_desc_show"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:textColor="@color/soft_blue"
...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground 'fight clubs' forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion." />

                <Button
                    android:id="@+id/btn_share_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:layout_marginBottom="@dimen/dp_32"
...
