<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage"
        android:icon="@drawable/ic_home_white"
        android:contentDescription="@string/menu_home"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_white"
        android:contentDescription="@string/menu_favorite"
        android:title="@string/menu_favorite"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting_white"
        android:contentDescription="@string/menu_setting"
        android:title="@string/menu_setting"/>

</menu>